@@ -3,15 +3,16 @@ develop = .
 parts = test data zopectl app
 find-links = http://download.zope.org/distribution/
 # Test also with other configs...
-extends = http://grok.zope.org/releaseinfo/grok-1.0a4.cfg
+extends = versions.cfg
 versions = versions
 
 [data]
 recipe = zc.recipe.filestorage
 
 [versions]
-grokui.admin = 0.4dev # Override setting in grok-x.x.cfg
+grokui.admin = 
 grokcore.security = 1.1
+grokcore.view = 1.9
 
 [app]
 recipe = zc.zope3recipes>=0.5.3:application
