@@ -40,6 +40,7 @@ setup(name='grokui.admin',
       install_requires=['setuptools',
                         'ZODB3',
                         'grok',
+			'grokcore.view >= 1.9',
                         'martian',
                         'z3c.flashmessage',
                         'zope.annotation',
